--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -145,8 +145,8 @@ Validation, and Machine Learning in Python</p>
 <p>Wrote an article analyzing thousands of Anime using data from the website myanimelist.com. Used R to find and visualize insights of the data.</p>
 </li>
 </ul>
-<p><a href="https://www.dropbox.com/s/76bk4kk4nqlnj3c/Anime_Analysis.html?dl=0">Check it out here</a></p>
 <p><em>Skills Demonstrated:</em> Data Preprocssing and Data Visualization in R</p>
+<p><a href="https://www.dropbox.com/s/76bk4kk4nqlnj3c/Anime_Analysis.html?dl=0">Check it out here</a></p>
 <ul>
 <li>
 <p><strong>Slackverse Vignette:</strong></p>
@@ -154,7 +154,7 @@ Validation, and Machine Learning in Python</p>
 verse of packages that links R to the communication tool, Slack.</p>
 </li>
 </ul>
-<p><em>Skills Demonstrated:</em> Vignette Writing and Creating Use Cases in R</p>
+<p><em>Skills Demonstrated:</em> Writing vignettes, use cases, and  Creating Package Documentation in R</p>
 <p><a href="https://www.dropbox.com/s/ieeqouqh431nu2s/Slackverse_Vignette.html?dl=0">Check it out here</a></p>
 <ul>
 <li>
